# assignment-W-4

./: .clippy.toml  .commitlintrc.yaml  .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.service  INSTALL.md  PROJECT_STATUS.md  QUICK_START.md  README.md  docker-compose.dev.yml  docker-compose.yml  justfile  release.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.claude/: CHANGELOG.md  CONVERSATION_SUMMARY.md  README.md  SESSION_2025-12-29.md  examples.md  settings.json
.github/workflows/: build-deploy.yaml  deploy.yml  release.yaml
argocd/applications/: client.yaml
argocd/applicationsets/: microservices.yaml
client/: Cargo.toml
deployments/asset-service/: kustomization.yaml
deployments/auth-service/: kustomization.yaml
deployments/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
deployments/chat-service/: kustomization.yaml
deployments/graphics-gateway/: kustomization.yaml
deployments/persistence-service/: kustomization.yaml
deployments/physics-service/: kustomization.yaml
deployments/script-executor/: kustomization.yaml
deployments/text-gateway/: kustomization.yaml
deployments/web-portal/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
deployments/world-state/: kustomization.yaml
docs/: ARGOCD_SETUP.md  ARGOCD_SUMMARY.md  BASELINE_READY.md  DATABASE_AND_VERSIONING_SETUP.md  DATABASE_STRATEGY.md  DEPLOYMENT_WORKFLOW.md  MICROSERVICES_QUICKSTART.md  MICROSERVICES_SUMMARY.md  MIGRATION_TO_MICROSERVICES.md  ORANGEPI_SETUP_CHECKLIST.md  PRE_PUSH_CHECKLIST.md  QUICK_REFERENCE.md  SCOPE_CHANGE_SUMMARY.md  SETUP_COMPLETE.md  VERSIONING_STRATEGY.md  WEB_PORTAL.md  architecture.md  deployment-strategy.md  development-workflow.md  microservices-architecture.md  pre-commit-guide.md  pre-commit-summary.md  rust-learnings.md  scripting-research.md  tools-setup.md  vision.md
server/: Cargo.toml  Dockerfile
services/asset-service/: Cargo.toml  Dockerfile
services/asset-service/src/: main.rs
services/auth-service/: Cargo.toml  Dockerfile
services/auth-service/src/: main.rs
services/chat-service/: Cargo.toml  Dockerfile
services/chat-service/src/: main.rs
services/graphics-gateway/: Cargo.toml  Dockerfile
services/graphics-gateway/src/: main.rs
services/persistence-service/: Cargo.toml  Dockerfile
services/persistence-service/src/: main.rs
services/physics-service/: Cargo.toml  Dockerfile
services/physics-service/src/: main.rs
services/script-executor/: Cargo.toml  Dockerfile
services/script-executor/src/: lua_executor.rs  main.rs  rhai_executor.rs
services/text-gateway/: Cargo.toml  Dockerfile
services/text-gateway/src/: main.rs
services/world-state/: Cargo.toml  Dockerfile
services/world-state/src/: main.rs
shared/: Cargo.toml
shared/examples/: bevy_ecs_basics.rs  ownership_basics.rs
shared/src/: components.rs  lib.rs  physics.rs  protocol.rs  systems.rs
tests/: integration_test.rs
web-portal/: .dockerignore  .env.example  Dockerfile  package.json  svelte.config.js
web-portal/src/: app.css
web-portal/src/lib/: api.ts  validation.ts
web-portal/src/lib/stores/: auth.ts
web-portal/src/routes/: +layout.svelte  +page.svelte
web-portal/src/routes/api/health/: +server.ts
web-portal/src/routes/dashboard/: +page.svelte
web-portal/src/routes/login/: +page.svelte
web-portal/src/routes/register/: +page.svelte
web-portal/src/routes/worlds/: +page.svelte
