[workspace]
resolver = "2"
members = ["client", "server", "shared"]

[workspace.dependencies]
# Define versions once here
bevy = { version = "0.15", features = ["wayland"] } # Arch needs wayland support
lightyear = "0.18" # Check for latest version
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# Link your local shared crate
shared = { path = "./shared" }

# OPTIMIZATION: High performance for debug builds (makes game run fast in dev)
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3